--- a/install-dev/langs/en/data/tab.xml
+++ b/install-dev/langs/en/data/tab.xml
@@ -96,7 +96,7 @@
     <tab id="Products_1" name="Product Settings" />
     <tab id="Products" name="Products" />
     <tab id="Products_v2" name="Products (experimental)" />
-    <tab id="Profiles" name="Profiles" />
+    <tab id="Profiles" name="Roles" />
     <tab id="Quick_Access" name="Quick Access" />
     <tab id="Referrers" name="Referrers" />
     <tab id="Search_1" name="Search" />
